mobile view medis quary
created resume page

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
     --colorWhite: white;
     --colorlightWhite: #ffffffb6;
     --colorBlack:#000000;
-    --colorBody:#212121;
+    --colorBody:#151515;
     --colorlightBlack:#151515;
-    --colorBlue:#003248e7;
+    --colorBlue:#003248;
     --colorStrongBlue:#004cff;
 }
 
