--- a/src/Components/asideNavBar/asidebar.css
+++ b/src/Components/asideNavBar/asidebar.css
@@ -3,7 +3,6 @@
     margin:20px auto;
     border-radius: 15px;
     display: flex;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .sideNavBar{
     position: relative;
@@ -39,6 +38,7 @@
     width: 100%;
 }
 .listItem ul li{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 100%;
     text-align: left;
     list-style-type: none;
@@ -70,7 +70,7 @@
   .listItem ul li.active .hoverdot1 {
     width: 25px;
   height: 25px;
-  background-color: var(--colorStrongBlue);
+  background-color: var(--colorBlue);
   border: 4px solid var(--colorBody);
   box-sizing: border-box;
   position: absolute;
@@ -78,26 +78,15 @@
   z-index: 10;
   right: -5%;
   }
-  .listItem ul li.active .hoverdot2 {
-    width: 25px;
-    height: 25px;
-    border: 4px solid var(--colorBody);
-    box-sizing: border-box;
-    background-color: var(--colorStrongBlue);
-    position: absolute;
-    border-radius: 50%;
+  .listItem ul li.active .hoverTrangle {
+    width: 0;
+	height: 0;
+	border-top: 20px solid transparent;
+	border-right: 30px solid var(--colorBlue);
+	border-bottom: 20px solid transparent;
     z-index: 10;
-    right: -18%;
   }
   
-  .listItem ul li.active .hoverLine {
-    width: 35px;
-    height: 5px;
-    background-color: var(--colorStrongBlue);
-    position: absolute;
-    z-index: 12;
-    right: -15%;
-  }
   .PageRendering{
      padding: 40px;
     
