--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -3,6 +3,7 @@
     gap: 50px;
     padding: 10px 25px;
     background-color: var(--colorBlack);
+    font-size: 18px;
 }
 .footerSection a{
 color: Red;
@@ -10,4 +11,10 @@ text-decoration: none;
 }
 .footerSection a:hoVer{
     color: rgb(255, 136, 0);
+    }
+    @media screen and (max-width: 768px) {
+        .footerSection{
+            font-size:12px;
+        }
+        
     }
